--- a/netmas/src/main/java/nodagumi/Itk/Makefile
+++ b/netmas/src/main/java/nodagumi/Itk/Makefile
@@ -69,6 +69,9 @@ test_all ::
 
 
 ##------------------------------------------------------------
+list ::
+	awk '/^(SAMPLE|run)/ {print}' ./Makefile
+##------------------------------------------------------------
 run : run2
 
 run_base ::
