Pollution File で、単純な序数タグだけでなく、一般の文字列タグも使えるようにした。
Pollution File の先頭行が # で始まる場合、その先頭行を、
	  #<開始時刻>, tag1, tag2, tag3, ...
と解釈することにした。

ただし、開始時刻はまだ未対応。

--- a/netmas/src/main/java/nodagumi/Itk/Makefile
+++ b/netmas/src/main/java/nodagumi/Itk/Makefile
@@ -104,6 +104,11 @@ run0s4 ::
 	(cd $(BASEDIR) ; bash quickstart.sh $(SAMPLE0s4))
 
 ##-----
+SAMPLE0s4t = sample/4links/properties-tagPol.xml	#stop (4link, gas, tag指定)
+run0s4t ::
+	(cd $(BASEDIR) ; bash quickstart.sh $(SAMPLE0s4t))
+
+##-----
 SAMPLE0sm = sample/stop-sample/properties_24.json	#stop (門司港)
 run0sm ::
 	(cd $(BASEDIR) ; bash quickstart.sh $(SAMPLE0sm))
