--- a/netmas/build.gradle
+++ b/netmas/build.gradle
@@ -21,6 +21,7 @@ dependencies {
     compile 'net.arnx:jsonic:1.3.7'
     compile 'net.sf.opencsv:opencsv:2.3'
     compile 'junit:junit:4.12'
+    compile 'org.jruby:jruby:9.+'
     compile fileTree(dir: 'libs/jar', include: '*.jar')
 
     runtime fileTree(dir: 'libs/windows/amd64', include: '*.dll')
