--- a/crowdwalk/src/main/java/nodagumi/Itk/Makefile
+++ b/crowdwalk/src/main/java/nodagumi/Itk/Makefile
@@ -75,8 +75,13 @@ test_all ::
 
 
 ##------------------------------------------------------------
+pull ::
+	(cd ../../../../../.. ; gitPullAll -c -r)
+
+##------------------------------------------------------------
 list ::
 	awk '/^(SAMPLE|run)/ {print}' ./Makefile
+
 ##------------------------------------------------------------
 run : run2
 
