SimClock 導入、一応完了。
効率チェックはまだ。

--- a/crowdwalk/build.gradle
+++ b/crowdwalk/build.gradle
@@ -42,6 +42,8 @@ def defaultEncoding = 'UTF-8'
 
 compileJava {
     options.encoding = defaultEncoding
+//    options.compilerArgs = ['-Xlint:unchecked', '-Xdiags:verbose'] 
+    options.compilerArgs = ['-Xdiags:verbose'] 
 }
 
 processResources {
