--- a/crowdwalk/build.gradle
+++ b/crowdwalk/build.gradle
@@ -17,6 +17,7 @@ repositories {
 dependencies {
     compile localGroovy()   // Gradleに同梱されているGroovyを使う
     compile 'commons-cli:commons-cli:1.2'
+    compile 'commons-codec:commons-codec:1.10'
     compile 'xalan:xalan:2.7.0'
     compile 'net.arnx:jsonic:1.3.7'
     compile 'net.sf.opencsv:opencsv:2.3'
