--- a/crowdwalk/build.gradle
+++ b/crowdwalk/build.gradle
@@ -18,6 +18,7 @@ dependencies {
     compile localGroovy()   // Gradleに同梱されているGroovyを使う
     compile 'commons-cli:commons-cli:1.2'
     compile 'commons-codec:commons-codec:1.10'
+    compile 'org.apache.xmlgraphics:batik-awt-util:1.8'
     compile 'xalan:xalan:2.7.0'
     compile 'net.arnx:jsonic:1.3.7'
     compile 'net.sf.opencsv:opencsv:2.3'
