ThinkFormula および NaviFormula において、配列型の expr を許すようにした。
これまで、例えば if 文は、
     {"": "if",
      "cond": <条件式>,
      "then": <then節>,
      "else": <else節>}
と書かないと行けなかった。新しいものでは、
     ["if", <条件式>, <then節>, <else節>]
という記法を許容するようにした。（LISP型）
ただし、AgentやLinkの値をいじるformについては、従来の object 型のみ。

--- a/crowdwalk/src/main/java/nodagumi/Itk/Makefile
+++ b/crowdwalk/src/main/java/nodagumi/Itk/Makefile
@@ -213,6 +213,13 @@ run3gt00_cui ::
 	(cd $(BASEDIR) ; time bash quickstart.sh -l Info --cui $(SAMPLE3gt00))
 
 ##-----
+SAMPLE3gt00a = sample/generatedTown/gridTown00.array.prop.json   # array formula
+run3gt00a ::
+	(cd $(BASEDIR) ; bash quickstart.sh -l Info $(SAMPLE3gt00a))
+run3gt00a_cui ::
+	(cd $(BASEDIR) ; time bash quickstart.sh -l Info --cui $(SAMPLE3gt00a))
+
+##-----
 SAMPLE3gt00r = sample/generatedTown/gridTown00.ruby.prop.json   # ruby agent
 run3gt00r ::
 	(cd $(BASEDIR) ; bash quickstart.sh $(SAMPLE3gt00r))
