Proj4J(地図座標変換ライブラリ)を導入し、Ruby のメソッド呼び出しでおこなっていた座標変換はこれを使う様に改めた。
変換精度が上がったため出力座標に多少の差異が生じる。
出力マップデータの座標値とlengthの値を小数点以下第4桁で四捨五入する様にした。
Version 1.10 (April 7, 2016) になった。

--- a/GisToCrowdwalk/build.gradle
+++ b/GisToCrowdwalk/build.gradle
@@ -25,6 +25,7 @@ dependencies {
     compile 'junit:junit:4.12'
     compile 'org.geotools:gt-shapefile:2.7-M3'
     compile 'org.geotools:gt-swing:2.7-M3'
+    compile 'org.osgeo:proj4j:0.1.0'
     compile fileTree(dir: 'lib', include: '*.jar')
 }
 
