GisToCrowdwalkにコマンドラインオプション機能とシェープファイルの仕様定義機能を追加した。
・系番号以外の選択ダイアログを廃止してコマンドラインオプションで指定する様にした。
・シェープファイルのメーカーごとの仕様の違いを"shapefile_specs.json"ファイルに定義して利用する様にした。カレントディレクトリに存在しなければリソースファイルから読み込む。
・マップファイルの <Group> タグに zone 属性(平面直角座標系の系番号)を追加した。
・コマンドラインヘルプの出力

usage: ImportGis [-h] [-p] [-s <SPEC>] [-S] [-t] [-T] [-z <NUMBER>] [Shapefile]
 -h,--help                          この使い方を表示して終了する
 -p,--output_by_plane_rectangular   平面直角座標系のまま出力する
 -s,--shapefile-spec <SPEC>         読み込むシェープファイルの形式を指定する
                                    SPEC = アルプス社 | 住友電工 | 昭文社 | 石巻
 -S,--make_simple_model             簡易モデルのマップを出力する
 -t,--add_coordinate_value_tag      経緯度タグをノードに付加する
 -T,--output_by_tokyo_datum         旧日本測地系で出力する
 -z,--zone <NUMBER>                 平面直角座標系の系番号(1～19)を指定する

--- a/GisToCrowdwalk/build.gradle
+++ b/GisToCrowdwalk/build.gradle
@@ -32,7 +32,10 @@ dependencies {
 sourceSets {
     main {
         java {
-            srcDirs = ["../crowdwalk/src"];
+            srcDirs = ["../crowdwalk/src/main/java"];
+        }
+        resources {
+            srcDirs = ["../crowdwalk/src/main/resources"];
         }
     }
 }
