--- a/crowdwalk/build.gradle
+++ b/crowdwalk/build.gradle
@@ -30,6 +30,7 @@ dependencies {
     compile 'net.sf.opencsv:opencsv:2.3'
     compile 'junit:junit:4.12'
 //    compile 'org.jruby:jruby:9.+'
+    compile 'org.osgeo:proj4j:0.1.0'
     compile fileTree(dir: 'libs/jar', include: '*.jar')
 
     runtime fileTree(dir: 'libs/windows/amd64', include: '*.dll')
