javadoc をブラウザで表示した時に図表が正常に表示されるようにした。javadoc 用のソースコメントも少し修正。
gradle の javadoc 機能を使うと "doc-files" ディレクトリをコピーしてくれないため。
javadoc コマンド実行用のシェルファイルを用意して、gradle の javadoc タスクではそれを実行するようにした。
シェルファイルを直接実行してもよい。

--- a/crowdwalk/build.gradle
+++ b/crowdwalk/build.gradle
@@ -87,13 +87,11 @@ jar {
     }
 }
 
-javadoc {
-    destinationDir = file("./doc/javadoc/")
-    options.setEncoding("UTF-8")
-    options.charSet("UTF-8")
-    options.quiet()
-    options.noTimestamp()
-    setFailOnError(false)
+task javadoc(overwrite: true) << {
+    exec {
+        executable "sh"
+        args "-c", "./make_javadoc.sh"
+    }
 }
 
 task clearCache() {
