--- a/crowdwalk/build.gradle
+++ b/crowdwalk/build.gradle
@@ -16,6 +16,17 @@ apply plugin: 'eclipse'
 //targetCompatibility = '1.8' ;
 //sourceCompatibility = '1.6' ;
 
+def javaVersion = new Double(sourceCompatibility.toString())
+def onlyCuiSimulator = cui.toBoolean()
+
+if (javaVersion < 1.8) {
+    println "javaVersion ${javaVersion}"
+    onlyCuiSimulator = true
+}
+if (onlyCuiSimulator) {
+    println "build mode: onlyCuiSimulator"
+}
+
 repositories {
     mavenCentral()
 }
@@ -34,17 +45,38 @@ dependencies {
     compile 'math.geom2d:javaGeom:0.11.1'
     compile fileTree(dir: 'libs/jar', include: '*.jar')
 
-    runtime fileTree(dir: 'libs/windows/amd64', include: '*.dll')
-    runtime fileTree(dir: 'libs/windows/i386', include: '*.dll')
-    runtime fileTree(dir: 'libs/linux/amd64', include: '*.so')
-    runtime fileTree(dir: 'libs/linux/i386', include: '*.so')
-    runtime fileTree(dir: 'libs/macosx', include: '*.jnilib')
+    if (! onlyCuiSimulator) {
+        runtime fileTree(dir: 'libs/windows/amd64', include: '*.dll')
+        runtime fileTree(dir: 'libs/windows/i386', include: '*.dll')
+        runtime fileTree(dir: 'libs/linux/amd64', include: '*.so')
+        runtime fileTree(dir: 'libs/linux/i386', include: '*.so')
+        runtime fileTree(dir: 'libs/macosx', include: '*.jnilib')
+    }
 }
 
 sourceSets {
     main {
         java {
-            exclude '**/ImportGis.java'
+            if (onlyCuiSimulator) {
+                exclude 'nodagumi/ananPJ/CrowdWalkLauncher.java'
+                exclude 'nodagumi/ananPJ/GuiSimulationEditorLauncher.java'
+                exclude 'nodagumi/ananPJ/GuiSimulationLauncher.java'
+                exclude 'nodagumi/ananPJ/GuiSimulationLauncher2D.java'
+                exclude 'nodagumi/ananPJ/GuiSimulationLauncher3D.java'
+                exclude 'nodagumi/ananPJ/Settings.java'
+                exclude 'nodagumi/ananPJ/ImportGis.java'
+                exclude 'nodagumi/ananPJ/Editor/**'
+                exclude 'nodagumi/ananPJ/Gui/**'
+                exclude 'nodagumi/ananPJ/misc/GetDoublesDialog.java'
+                exclude 'nodagumi/ananPJ/misc/GridMapAreaDialog.java'
+                exclude 'nodagumi/ananPJ/misc/GsiAccessor.java'
+                exclude 'nodagumi/ananPJ/misc/Hover.java'
+                exclude 'nodagumi/ananPJ/misc/MapChecker.java'
+                exclude 'nodagumi/ananPJ/Simulator/SimulationPanel3D.java'
+            } else {
+                exclude 'nodagumi/ananPJ/CuiCrowdWalkLauncher.java'
+            }
+            exclude 'nodagumi/ananPJ/ImportGis.java'
         }
     }
 }
@@ -77,7 +109,11 @@ processResources {
 }
 
 jar {
-    manifest.mainAttributes("Main-Class" : "nodagumi.ananPJ.CrowdWalkLauncher")
+    if (onlyCuiSimulator) {
+        manifest.mainAttributes("Main-Class" : "nodagumi.ananPJ.CuiCrowdWalkLauncher")
+    } else {
+        manifest.mainAttributes("Main-Class" : "nodagumi.ananPJ.CrowdWalkLauncher")
+    }
     doFirst {
         from (configurations.compile.collect { it.isDirectory() ? it : zipTree(it) }) {
             exclude 'META-INF/MANIFEST.MF'
