OSM変換ツールの整備。

--- a/crowdwalk/src/main/java/nodagumi/Itk/Makefile
+++ b/crowdwalk/src/main/java/nodagumi/Itk/Makefile
@@ -300,7 +300,7 @@ run3crs4p ::
 ##-----
 SAMPLE4gnz0 = sample/ginza/ginza00.prop.json   # Ginza
 run4gnz0 ::
-	(cd $(BASEDIR) ; time -p bash quickstart.sh --log-level Info $(SAMPLE4gnz0))
+	(cd $(BASEDIR) ; cd `dirname $(SAMPLE4gnz0)` ; time -p bash ../../quickstart.sh --log-level Info `basename $(SAMPLE4gnz0)`)
 
 
 
