OSM コンバータで、冗長ノードの削除のバグを削除。メインも、エラー処理追加。   * 冗長ノードの削除機能。   * メインで、id がないリンクがあると、エラーとした。

--- a/crowdwalk/build.gradle
+++ b/crowdwalk/build.gradle
@@ -5,7 +5,8 @@
 
 import org.apache.tools.ant.filters.ReplaceTokens
 
-defaultTasks 'clean', 'build', 'javadoc'
+// defaultTasks 'clean', 'build', 'javadoc'
+defaultTasks 'clean', 'build'
 
 apply plugin: 'java'
 apply plugin: 'eclipse'
