propファイルの説明から mental_map_rules の書き方へのリンク追加。

--- a/crowdwalk/src/main/java/nodagumi/Itk/Makefile
+++ b/crowdwalk/src/main/java/nodagumi/Itk/Makefile
@@ -28,6 +28,7 @@ JUNITCLASS = org.junit.runner.JUnitCore # for JUnit v.4
 
 ##------------------------------------------------------------
 doc ::
+	rm $(BASEDIR)/doc/javadoc/nodagumi/ananPJ/package-summary.html
 	( cd $(BASEDIR) ; gradle javadoc  )
 
 doc-old ::
