--- a/crowdwalk/build.gradle
+++ b/crowdwalk/build.gradle
@@ -41,18 +41,10 @@ dependencies {
     compile 'net.arnx:jsonic:1.3.7'
     compile 'net.sf.opencsv:opencsv:2.3'
     compile 'junit:junit:4.12'
-//    compile 'org.jruby:jruby:9.+'
+    compile 'org.jruby:jruby:9.+'
     compile 'org.osgeo:proj4j:0.1.0'
     compile 'math.geom2d:javaGeom:0.11.1'
-    compile fileTree(dir: 'libs/jar', include: '*.jar')
-
-    if (! onlyCuiSimulator) {
-        runtime fileTree(dir: 'libs/windows/amd64', include: '*.dll')
-        runtime fileTree(dir: 'libs/windows/i386', include: '*.dll')
-        runtime fileTree(dir: 'libs/linux/amd64', include: '*.so')
-        runtime fileTree(dir: 'libs/linux/i386', include: '*.so')
-        runtime fileTree(dir: 'libs/macosx', include: '*.jnilib')
-    }
+    compile 'com.opencsv:opencsv:3.8'
 }
 
 sourceSets {
@@ -73,7 +65,6 @@ sourceSets {
                 exclude 'nodagumi/ananPJ/misc/GsiAccessor.java'
                 exclude 'nodagumi/ananPJ/misc/Hover.java'
                 exclude 'nodagumi/ananPJ/misc/MapChecker.java'
-                exclude 'nodagumi/ananPJ/Simulator/SimulationPanel3D.java'
             } else {
                 exclude 'nodagumi/ananPJ/CuiCrowdWalkLauncher.java'
             }
