hasTag を、equals ベースから == ベースに変更。 それに伴い、必要な intern を追加。 Ruby 側の ItkTerm もいろいろ修正。

--- a/crowdwalk/src/main/java/nodagumi/Itk/Makefile
+++ b/crowdwalk/src/main/java/nodagumi/Itk/Makefile
@@ -113,7 +113,8 @@ run0w ::
 	(cd $(BASEDIR) ; bash quickstart.sh $(SAMPLE0w))
 
 ##-----
-SAMPLE0s2 = sample/2links/properties-width-100.xml	#stop (2link)
+##SAMPLE0s2 = sample/2links/properties-width-100.xml	#stop (2link)
+SAMPLE0s2 = sample/2links/properties-width-1.xml	#stop (2link)
 run0s2 ::
 	(cd $(BASEDIR) ; bash quickstart.sh $(SAMPLE0s2))
 
