3D 表示で、register 前の agent の表示のワーニングを、Itk.logInfo に統一。

--- a/crowdwalk/src/main/java/nodagumi/Itk/Makefile
+++ b/crowdwalk/src/main/java/nodagumi/Itk/Makefile
@@ -312,6 +312,11 @@ run4gnz0 ::
 	(cd $(BASEDIR) ; cd `dirname $(SAMPLE4gnz0)` ; time -p bash ../../quickstart.sh --log-level Info `basename $(SAMPLE4gnz0)`)
 
 ##-----
+SAMPLE4gnz0d = sample/ginza/ginza00d.prop.json   # Ginza
+run4gnz0d ::
+	(cd $(BASEDIR) ; cd `dirname $(SAMPLE4gnz0d)` ; time -p bash ../../quickstart.sh --log-level Info `basename $(SAMPLE4gnz0d)`)
+
+##-----
 SAMPLE5loop0 = sample/generatedTown/gridTown01s.prop.json   # stay loop
 run5loop0 ::
 	(cd $(BASEDIR) ; cd `dirname $(SAMPLE5loop0)` ; time -p bash ../../quickstart.sh --log-level Info `basename $(SAMPLE5loop0)`)
