ruby の基本ライブラリを、jar に含めて、それを参照するようにした。 LOAD_PATH に uri:classloader:/... というのを追加。 さらに gradle.build を変更して、jar に rubylib を読み込むようにした。

--- a/crowdwalk/build.gradle
+++ b/crowdwalk/build.gradle
@@ -129,6 +129,13 @@ jar {
             exclude 'META-INF/*.DSA'
             exclude 'META-INF/*.RSA'
         }
+	/* for ruby */
+	tasks.copyRubyLib.execute() ;
+    }
+    
+    /* for ruby */
+    into('ruby') {
+      from('build/ruby')
     }
 }
 
@@ -157,3 +164,18 @@ task cleanAll {
        delete(f) ;
      }
 }
+
+/* [2017.07.14 I.Noda] ruby のファイルを jar に含める。
+ */
+task mkdirForRuby {
+     doFirst {
+       mkdir('build/ruby');
+       mkdir('build/ruby/CrowdWalk') ;
+     }
+}
+
+task copyRubyLib(dependsOn: mkdirForRuby, type: Copy) {
+    from 'src/main/ruby'
+    into 'build/ruby/CrowdWalk'
+}
+
